# tesla-fsd-benchmark

./: README.md  main.py  pyproject.toml
config/registry/: all_signals_registry.csv  dbc_signals_metadata.csv  enum_maps.json
data/catalog/: dbc_signals_metadata.csv  enum_maps.json  final_signals.txt  merged_signal_quality.csv  signal_diff_report.csv  signal_diff_report.md
data/decoded/: 00000001_can1_can.parquet  00000001_can1_party.parquet  00000001_can1_vehicle.parquet  00000001_can9_internal.parquet  00000002_can1_can.parquet  00000002_can9_internal.parquet  00000003_can1_can.parquet  00000003_can1_party.parquet  00000003_can1_vehicle.parquet  00000003_can9_internal.parquet
data/downsampled/: 00000001_can1_can_downsampled.parquet  00000001_can1_party_downsampled.parquet  00000001_can1_vehicle_downsampled.parquet  00000001_can9_internal_downsampled.parquet  00000002_can1_can_downsampled.parquet  00000002_can1_party_downsampled.parquet  00000002_can1_vehicle_downsampled.parquet  00000002_can9_internal_downsampled.parquet  00000003_can1_can_downsampled.parquet  00000003_can1_party_downsampled.parquet  00000003_can1_vehicle_downsampled.parquet  00000003_can9_internal_downsampled.parquet
data/interim/: 00000001_can1_can_downsampled.parquet  00000001_can1_party_downsampled.parquet  00000001_can1_vehicle_downsampled.parquet  00000001_can9_internal_downsampled.parquet  00000002_can1_can_downsampled.parquet  00000002_can1_party_downsampled.parquet  00000002_can1_vehicle_downsampled.parquet  (+5 more)
notebooks/: 01_signal_exploration.ipynb  02_select_signals.ipynb
(+51 files in other folders)
